# arcgen

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  sonar-project.properties
.github/workflows/: cmake.yml
cmake/: arcgenConfig.cmake.in
common/utils/: output_paths.hpp  pose_sampling.hpp  visualizer.hpp  workspace_generators.hpp
docs/: ARCHITECTURE.md  CROSS_COMPILATION.md  STYLE.md  TROUBLESHOOTING.md
include/: arcgen.hpp
include/arcgen/core/: control.hpp  math.hpp  numeric.hpp  state.hpp
include/arcgen/geometry/: robot.hpp  skeleton.hpp  straight_skeleton.hpp  workspace.hpp
include/arcgen/planner/: evaluator.hpp  search_engine.hpp
include/arcgen/planner/connector/: connector.hpp  greedy_connector.hpp
include/arcgen/planner/constraints/: collision.hpp  constraints.hpp  footprint_collision.hpp  path_length.hpp
include/arcgen/planner/engine/: evaluator.hpp  search_engine.hpp
include/arcgen/planner/geometry/: robot.hpp  skeleton.hpp  straight_skeleton.hpp  workspace.hpp
include/arcgen/planner/graph/: astar.hpp  graph_search.hpp
include/arcgen/planner/search/: astar.hpp  graph_search.hpp
include/arcgen/planning/constraints/: collision.hpp  constraints.hpp  footprint_collision.hpp  path_length.hpp
include/arcgen/planning/engine/: evaluator.hpp  search_engine.hpp
include/arcgen/planning/engine/connector/: connector.hpp  greedy_connector.hpp
include/arcgen/planning/search/: astar.hpp  graph_search.hpp
include/arcgen/steering/: dubins.hpp  path.hpp  reeds_shepp.hpp  steering.hpp
tests/: README.md
tests/common/: plot_dir.hpp  pose_sampling.hpp  test_main.cpp  test_stats.hpp  visualizer.hpp  workspace_generators.hpp
tests/common/utils/: visualizer_tests.cpp
tests/core/: control_tests.cpp  math_tests.cpp  numeric_tests.cpp  state_tests.cpp
tests/geometry/: robot_tests.cpp  skeleton_tests.cpp
tests/planner/: evaluator_tests.cpp  search_engine_tests.cpp
tests/planner/connector/: greedy_connector_tests.cpp
tests/planner/constraints/: collision_tests.cpp  footprint_collision_tests.cpp  path_length_tests.cpp
tests/planner/engine/: search_engine_tests.cpp
tests/planner/geometry/: robot_tests.cpp  skeleton_tests.cpp  straight_skeleton_tests.cpp  workspace_tests.cpp
tests/planner/graph/: astar_tests.cpp  graph_search_tests.cpp
tests/planning/engine/: search_engine_tests.cpp
tests/planning/search/: graph_search_tests.cpp
tests/steering/: dubins_tests.cpp  path_tests.cpp  reeds_shepp_tests.cpp  steering_fixtures.hpp  steering_tests.cpp
tools/: generate_visualizations.cpp
